[tool.poetry]
name = "todo"
version = "0.1.0"
description = ""
authors = ["William Ardianto <william.ardianto@gmail.com>"]
readme = "README.md"
packages = [{include = "todo"},{include = "infra"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
aioredis = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
